# Nino26

./: .env.example  .gitattributes  .gitignore  AGENTS.md  DATA_SOURCES.md  METHODOLOGY.md  Makefile  PlanoDiretor_NINO-BRASIL.md  README.md  WSL_GPU_SETUP.md  pyproject.toml  requirements.lock.txt  requirements.txt
Artigos_Referências/: 1.Referencias_Bibliográficas_NINO26.xlsx  Referencias_Bibliográficas_NINO26.xlsx  Referências_Bibliográficas.xls
Fase3-zero/: .gitignore  README.md  RESTORATION_MANIFEST.json
Fase4-zero/: .gitignore  README.md  RESTORATION_MANIFEST.json  validate.py
configs/: project.yaml
data/: README.md
docs/: AMBIENTE_KERNEL_GPU.md  ARQUITETURA.md  CRONOGRAMA.md  DATA_SOURCES.md  DIRETRIZES_FASES.md  DOWNLOAD_CMD_NINO26.md  FASE2_VALIDACAO_CTD_WOD.md  FASE3_PENDENCIAS.md  FASE3_RECOMENDACOES.md  FASE3_WWV_SENSIBILIDADE_TEMPORAL.md  FASE4_PLANO.md  FASE5_ML_CICLO.md  FASE6_ML_BRASIL.md  FASE7_CONVLSTM_CICLO.md  FASE8_CONVLSTM_BRASIL.md  METODOLOGIA.md  METODOLOGIA_FASE4.md  PADRAO_NOTEBOOKS.md  PARECER_ORGANIZACAO_2026-07-09.md  PICO_FAIXA_BIBLIOGRAFIA.md  RELATORIO_CARACTERIZACAO_CRONOLOGICA_ELNINO_FASE3.md  RELATORIO_FASES_1_3.md  ROTEIRO_FASE3.md  RUNBOOK_DOWNLOADS.md  RUNBOOK_FASE2_OCEANO.md  RUNBOOK_OCEAN_DAILY.md  SETUP_WSL_GPU.md  index.html
notebooks/: README.md
scripts/: __init__.py  audit_ibge_boundaries.py  audit_ocean_phase2.py  audit_phase3_temporal_integrity.py  build_master_weekly.py  build_phase2_daily_inputs.py  build_phase2_insitu_validation.py  build_phase3_modeling_bridge.py  build_phase4_chirps_targets.py  check_gpu.py  (+73 more)
(+295 files in other folders)
